--- a/app/Resources/translations/messages.bg.yml
+++ b/app/Resources/translations/messages.bg.yml
@@ -190,9 +190,18 @@ listitem.confirm.delete: 'Are you sure you want delete this item?'
 records: Записи
 record.id: ID
 record.subject: Тема
+record.postponed: Отложен
 record.age: Възраст
 record.no_fields: 'Няма полета.'
+record.change_state: 'Промени условие'
+record.assign: Определям
+record.postpone: Отложи
+record.resume: Въстанови
+record.reopen: Възобновен
+record.clone: Клониране
 record.history: История
+record.confirm.postpone: 'Are you sure you want postpone this record?'
+record.confirm.resume: 'Сигурен ли сте че искате да въстановите този запис?'
 event.record_created: 'Записът е създаден по условие "%value%".'
 event.record_edited: 'Записът е променен.'
 event.record_assigned: 'Записът е определен на %value%.'
