--- a/app/Resources/translations/messages.cs.yml
+++ b/app/Resources/translations/messages.cs.yml
@@ -190,9 +190,18 @@ listitem.confirm.delete: 'Are you sure you want delete this item?'
 records: Záznamy
 record.id: ID
 record.subject: Předmět
+record.postponed: Odloženo
 record.age: Stáří
 record.no_fields: 'Žádná pole.'
+record.change_state: 'Změnit stav'
+record.assign: Přiřadit
+record.postpone: Odložit
+record.resume: Pokračovat
+record.reopen: Znovu otevřít
+record.clone: Kopírovat
 record.history: Historie
+record.confirm.postpone: 'Are you sure you want postpone this record?'
+record.confirm.resume: 'Jste si jisti, že chcete obnovit tento záznam?'
 event.record_created: 'Záznam je vytvořen ve stavu "%value%".'
 event.record_edited: 'Záznam je upraven.'
 event.record_assigned: 'Záznam je přiřazen uživateli %value%.'
