--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -189,9 +189,18 @@ listitem.confirm.delete: 'Are you sure you want delete this item?'
 records: Records
 record.id: ID
 record.subject: Subject
+record.postponed: Postponed
 record.age: Age
 record.no_fields: 'No fields.'
+record.change_state: 'Change state'
+record.assign: Assign
+record.postpone: Postpone
+record.resume: Resume
+record.reopen: Reopen
+record.clone: Clone
 record.history: History
+record.confirm.postpone: 'Are you sure you want postpone this record?'
+record.confirm.resume: 'Are you sure you want resume this record?'
 event.record_created: 'Record is created in state "%value%".'
 event.record_edited: 'Record is edited.'
 event.record_assigned: 'Record is assigned to %value%.'
