--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -190,9 +190,18 @@ listitem.confirm.delete: 'Are you sure you want delete this item?'
 records: Enregistrements
 record.id: ID
 record.subject: Sujet
+record.postponed: Ajourné
 record.age: Âge
 record.no_fields: 'Pas de champs.'
+record.change_state: 'Changer l''état'
+record.assign: Affecter
+record.postpone: Ajourner
+record.resume: Reprendre
+record.reopen: Rouvrir
+record.clone: Dupliquer
 record.history: Historique
+record.confirm.postpone: 'Are you sure you want postpone this record?'
+record.confirm.resume: 'Etes-vous sur de vouloir reprendre cet enregistrement?'
 event.record_created: 'Enregistrement créé en état "%value%".'
 event.record_edited: 'Enregistrement modifié.'
 event.record_assigned: 'Enregistrement affecté le %value%.'
