--- a/app/Resources/translations/messages.it.yml
+++ b/app/Resources/translations/messages.it.yml
@@ -190,9 +190,18 @@ listitem.confirm.delete: 'Are you sure you want delete this item?'
 records: Records
 record.id: ID
 record.subject: Oggetto
+record.postponed: Posposto
 record.age: Età
 record.no_fields: 'Nessun campo.'
+record.change_state: 'Cambia stato'
+record.assign: Assegna
+record.postpone: Posponi
+record.resume: Riprendi
+record.reopen: Riapri
+record.clone: Clona
 record.history: Storia
+record.confirm.postpone: 'Are you sure you want postpone this record?'
+record.confirm.resume: 'Riprendere questo record?'
 event.record_created: 'Il record è stato creato nello stato "%value%".'
 event.record_edited: 'Il record è stato modificato.'
 event.record_assigned: 'Il record è stato assegnato a %value%.'
