--- a/app/Resources/translations/messages.pt_BR.yml
+++ b/app/Resources/translations/messages.pt_BR.yml
@@ -190,9 +190,18 @@ listitem.confirm.delete: 'Are you sure you want delete this item?'
 records: Registros
 record.id: ID
 record.subject: Assunto
+record.postponed: Adiado
 record.age: Idade
 record.no_fields: 'Sem campos.'
+record.change_state: 'Mudar estado'
+record.assign: Delegar
+record.postpone: Adiar
+record.resume: Resumo
+record.reopen: Reabrir
+record.clone: Clonar
 record.history: Histórico
+record.confirm.postpone: 'Are you sure you want postpone this record?'
+record.confirm.resume: 'Tem certeza que quer retomar este registro?'
 event.record_created: 'Registro criado no estado "%value%".'
 event.record_edited: 'Registro modificado.'
 event.record_assigned: 'Registro delegado para %value%.'
