--- a/app/Resources/translations/messages.ro.yml
+++ b/app/Resources/translations/messages.ro.yml
@@ -190,9 +190,18 @@ listitem.confirm.delete: 'Are you sure you want delete this item?'
 records: Inregistrari
 record.id: ID
 record.subject: Subiect
+record.postponed: Amanat
 record.age: 'Vechime (zile)'
 record.no_fields: 'Nr campuri.'
+record.change_state: 'Schimba starea'
+record.assign: Asigneaza
+record.postpone: Amana
+record.resume: Restarteaza
+record.reopen: Redeschis
+record.clone: Clonare
 record.history: Istoric
+record.confirm.postpone: 'Are you sure you want postpone this record?'
+record.confirm.resume: 'Sunteti sigur ca vreti sa reluati aceasta inregistrare?'
 event.record_created: 'Inregistrarea e creata cu starea "%value%".'
 event.record_edited: 'Inregistrarea e modificata.'
 event.record_assigned: 'Inregistrarea e asignata lui %value%.'
