--- a/app/Resources/translations/messages.cs.yml
+++ b/app/Resources/translations/messages.cs.yml
@@ -206,7 +206,7 @@ event.record_created: 'Záznam je vytvořen ve stavu "%value%".'
 event.record_edited: 'Záznam je upraven.'
 event.record_assigned: 'Záznam je přiřazen uživateli %value%.'
 event.state_changed: 'Stav je změněn na "%value%".'
-event.record_postponed: 'Záznam je odložen do %value%.'
+event.record_postponed: 'Záznam je odložen.'
 event.record_resumed: 'Záznam je obnoven.'
 event.record_cloned: 'Záznam je kopií "%value%".'
 event.record_reopened: 'Záznam je znovu otevřen ve stavu "%value%".'
