--- a/app/Resources/translations/messages.de.yml
+++ b/app/Resources/translations/messages.de.yml
@@ -206,7 +206,7 @@ event.record_created: 'Die Anfrage wird im Status "%value%" erstellt.'
 event.record_edited: 'Die Anfrage wird geändert.'
 event.record_assigned: 'Die Anfrage wird %value% zugewiesen.'
 event.state_changed: 'Der Status wechselt nach "%value%".'
-event.record_postponed: 'Die Anfrage wird bis zum %value% verzögert.'
+event.record_postponed: 'Die Anfrage wird verzögert.'
 event.record_resumed: 'Die Anfrage wird wiederaufgenommen.'
 event.record_cloned: 'Anfrage wird geklont von "%value%".'
 event.record_reopened: 'Anfrage wurde im Status "%value%" wiedereröffnet.'
