--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -206,7 +206,7 @@ event.record_created: 'Enregistrement créé en état "%value%".'
 event.record_edited: 'Enregistrement modifié.'
 event.record_assigned: 'Enregistrement affecté le %value%.'
 event.state_changed: 'Etat changé en "%value%".'
-event.record_postponed: 'Enregistrement ajourné au %value%.'
+event.record_postponed: 'Enregistrement ajourné.'
 event.record_resumed: 'Enregistrement repris.'
 event.record_cloned: 'Duplication de "%value%".'
 event.record_reopened: 'L''enregistrement est rouvert dans l''état "%value%".'
