--- a/app/Resources/translations/messages.hu.yml
+++ b/app/Resources/translations/messages.hu.yml
@@ -206,7 +206,7 @@ event.record_created: 'Rekord létrehozva a következő állapottal: "%value%".'
 event.record_edited: 'Rekord módosítva.'
 event.record_assigned: 'A rekord új felelőse: %value%.'
 event.state_changed: 'A rekord állapota megváltozott: "%value%".'
-event.record_postponed: 'A rekord végrehajtása elhalasztva eddig: %value%.'
+event.record_postponed: 'A rekord elhalasztva.'
 event.record_resumed: 'A rekord folytatva.'
 event.record_cloned: 'A rekord a következő másolata: "%value%".'
 event.record_reopened: 'A rekordot újra megnyitották a következő állapotban: “%value%”.'
