--- a/app/Resources/translations/messages.it.yml
+++ b/app/Resources/translations/messages.it.yml
@@ -206,7 +206,7 @@ event.record_created: 'Il record è stato creato nello stato "%value%".'
 event.record_edited: 'Il record è stato modificato.'
 event.record_assigned: 'Il record è stato assegnato a %value%.'
 event.state_changed: 'Lo stato è stato cambiato in "%value%".'
-event.record_postponed: 'Il record è stato posposto fino al %value%.'
+event.record_postponed: 'Il record è stato posposto.'
 event.record_resumed: 'Il record è stato ripreso.'
 event.record_cloned: 'Il record è stato clonato da "%value%".'
 event.record_reopened: 'Il record è stato riaperto nello stato "%value%".'
