--- a/app/Resources/translations/messages.lv.yml
+++ b/app/Resources/translations/messages.lv.yml
@@ -206,7 +206,7 @@ event.record_created: 'Ieraksts ir izveidots "%value%" stāvoklī'
 event.record_edited: 'Ieraksts ir mainīts'
 event.record_assigned: 'Ieraksts adresēts uz %value%.'
 event.state_changed: 'Stāvoklis ir mainīts uz "%value%"'
-event.record_postponed: 'Ieraksts ir atlikts līdz "%value%"'
+event.record_postponed: 'Ieraksts ir atlikts'
 event.record_resumed: 'Ieraksts ir atsākts'
 event.record_cloned: 'Ieraksts klonēts no "%value%".'
 event.record_reopened: 'Ieraksts tika atvērts no jauna “%value%” stāvoklī.'
