--- a/app/Resources/translations/messages.pl.yml
+++ b/app/Resources/translations/messages.pl.yml
@@ -206,7 +206,7 @@ event.record_created: 'Rekord został utworzony ze statusem: "%value%".'
 event.record_edited: 'Rekord został zmodyfikowany.'
 event.record_assigned: 'Rekord został przypisany do %value%.'
 event.state_changed: 'Status został zmieniony do "%value%".'
-event.record_postponed: 'Rekord opóźni się do %value%.'
+event.record_postponed: 'Rekord został opóźni.'
 event.record_resumed: 'Rekord został wznowiony.'
 event.record_cloned: 'Rekord został skopiowany z "%value%".'
 event.record_reopened: 'Rekord został wznowiony ze statusem "%value%".'
