--- a/app/Resources/translations/messages.pt_BR.yml
+++ b/app/Resources/translations/messages.pt_BR.yml
@@ -206,7 +206,7 @@ event.record_created: 'Registro criado no estado "%value%".'
 event.record_edited: 'Registro modificado.'
 event.record_assigned: 'Registro delegado para %value%.'
 event.state_changed: 'Estado alterado para "%value%".'
-event.record_postponed: 'Registro adiado até %value%.'
+event.record_postponed: 'Registro adiado.'
 event.record_resumed: 'Registro retomado.'
 event.record_cloned: 'Registro clonado de "%value%".'
 event.record_reopened: 'O registro é reaberto no estado "%value%".'
