--- a/app/Resources/translations/messages.ro.yml
+++ b/app/Resources/translations/messages.ro.yml
@@ -206,7 +206,7 @@ event.record_created: 'Inregistrarea e creata cu starea "%value%".'
 event.record_edited: 'Inregistrarea e modificata.'
 event.record_assigned: 'Inregistrarea e asignata lui %value%.'
 event.state_changed: 'Starea e schimbata la "%value%".'
-event.record_postponed: 'Inregistrarea e amanata pana la %value%.'
+event.record_postponed: 'Inregistrarea e amanata.'
 event.record_resumed: 'Inregistrarea a fost reluata.'
 event.record_cloned: 'Inregistrarea este clonata din "%value%".'
 event.record_reopened: 'Tichetul este redeschis in starea %value%.'
