--- a/app/Resources/translations/messages.sv.yml
+++ b/app/Resources/translations/messages.sv.yml
@@ -206,7 +206,7 @@ event.record_created: 'Posten är skapad med status "%value%".'
 event.record_edited: 'Posten är ändrad.'
 event.record_assigned: 'Posten är tilldelad till %value%.'
 event.state_changed: 'Status är ändrad till "%value%".'
-event.record_postponed: 'Posten är uppskjuten till %value%.'
+event.record_postponed: 'Posten är uppskjuten.'
 event.record_resumed: 'Posten är återupptagen.'
 event.record_cloned: 'Posten ar klonad från "%value%".'
 event.record_reopened: 'Posten öppnas igen med status "%value%".'
