--- a/app/Resources/translations/messages.tr.yml
+++ b/app/Resources/translations/messages.tr.yml
@@ -206,7 +206,7 @@ event.record_created: 'Kayıt, "%value%" durumunda oluşturuldu.'
 event.record_edited: 'Kayıt değiştirildi.'
 event.record_assigned: 'Kayıt, atandı: %value%.'
 event.state_changed: 'Durum, "%value%" olarak değiştirildi.'
-event.record_postponed: 'Kayıt, %value% tarihine ertelendi.'
+event.record_postponed: 'Kayıt ertelendi.'
 event.record_resumed: 'Kayıt devam ettirildi.'
 event.record_cloned: 'Kayıt, "%value%"den klonlanmış.'
 event.record_reopened: 'Kayıt, "%value%" durumunda yeniden açıldı.'
