--- a/app/Resources/translations/messages.en_GB.yml
+++ b/app/Resources/translations/messages.en_GB.yml
@@ -206,7 +206,7 @@ event.record_created: 'Record is created in state "%value%".'
 event.record_edited: 'Record is edited.'
 event.record_assigned: 'Record is assigned to %value%.'
 event.state_changed: 'State is changed to "%value%".'
-event.record_postponed: 'Record is postponed till %value%.'
+event.record_postponed: 'Record is postponed.'
 event.record_resumed: 'Record is resumed.'
 event.record_cloned: 'Record is cloned from "%value%".'
 event.record_reopened: 'Record is reopened in state "%value%".'
