--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -206,7 +206,7 @@ event.record_created: 'Registro creado con el estado "%value%".'
 event.record_edited: 'Se modificó el registro.'
 event.record_assigned: 'Se asignó el registro a %value%.'
 event.state_changed: 'Se cambió el estado a "%value%".'
-event.record_postponed: 'Se aplazó el registro hasta el %value%.'
+event.record_postponed: 'Se aplazó el registro.'
 event.record_resumed: 'Se reanudó el registro.'
 event.record_cloned: 'El registro fue clonado desde "%value%".'
 event.record_reopened: 'El registro fue reabierto en el estado de "%value%".'
