--- a/app/Resources/translations/messages.bg.yml
+++ b/app/Resources/translations/messages.bg.yml
@@ -202,6 +202,7 @@ record.clone: Клониране
 record.history: История
 record.confirm.postpone: 'Are you sure you want postpone this record?'
 record.confirm.resume: 'Сигурен ли сте че искате да въстановите този запис?'
+record.confirm.delete: 'Сигурен ли сте че искате да изтриете този запис?'
 event.record_created: 'Записът е създаден по условие "%value%".'
 event.record_edited: 'Записът е променен.'
 event.record_assigned: 'Записът е определен на %value%.'
