--- a/app/Resources/translations/messages.cs.yml
+++ b/app/Resources/translations/messages.cs.yml
@@ -202,6 +202,7 @@ record.clone: Kopírovat
 record.history: Historie
 record.confirm.postpone: 'Are you sure you want postpone this record?'
 record.confirm.resume: 'Jste si jisti, že chcete obnovit tento záznam?'
+record.confirm.delete: 'Jste si jisti, že chcete smazat tento záznam?'
 event.record_created: 'Záznam je vytvořen ve stavu "%value%".'
 event.record_edited: 'Záznam je upraven.'
 event.record_assigned: 'Záznam je přiřazen uživateli %value%.'
