--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -202,6 +202,7 @@ record.clone: Dupliquer
 record.history: Historique
 record.confirm.postpone: 'Are you sure you want postpone this record?'
 record.confirm.resume: 'Etes-vous sur de vouloir reprendre cet enregistrement?'
+record.confirm.delete: 'Etes-vous sur de vouloir effacer cet enregistrement?'
 event.record_created: 'Enregistrement créé en état "%value%".'
 event.record_edited: 'Enregistrement modifié.'
 event.record_assigned: 'Enregistrement affecté le %value%.'
