--- a/app/Resources/translations/messages.hu.yml
+++ b/app/Resources/translations/messages.hu.yml
@@ -202,6 +202,7 @@ record.clone: Másolat
 record.history: Eseménynapló
 record.confirm.postpone: 'Are you sure you want postpone this record?'
 record.confirm.resume: 'Biztos folytatni szeretné a rekordot?'
+record.confirm.delete: 'Biztos törölni szeretné a rekordot?'
 event.record_created: 'Rekord létrehozva a következő állapottal: "%value%".'
 event.record_edited: 'Rekord módosítva.'
 event.record_assigned: 'A rekord új felelőse: %value%.'
