--- a/app/Resources/translations/messages.it.yml
+++ b/app/Resources/translations/messages.it.yml
@@ -202,6 +202,7 @@ record.clone: Clona
 record.history: Storia
 record.confirm.postpone: 'Are you sure you want postpone this record?'
 record.confirm.resume: 'Riprendere questo record?'
+record.confirm.delete: 'Eliminare questo record?'
 event.record_created: 'Il record è stato creato nello stato "%value%".'
 event.record_edited: 'Il record è stato modificato.'
 event.record_assigned: 'Il record è stato assegnato a %value%.'
