--- a/app/Resources/translations/messages.ja.yml
+++ b/app/Resources/translations/messages.ja.yml
@@ -202,6 +202,7 @@ record.clone: コピー(転送)
 record.history: 履歴
 record.confirm.postpone: 'Are you sure you want postpone this record?'
 record.confirm.resume: このレコードを再開してよろしいですか？
+record.confirm.delete: レコードを削除してよろしいですか？
 event.record_created: 'レコードは "%value%" のステータスで作成されました。'
 event.record_edited: レコードが変更されました。
 event.record_assigned: 'レコードは %value% にアサインされました。'
