--- a/app/Resources/translations/messages.lv.yml
+++ b/app/Resources/translations/messages.lv.yml
@@ -202,6 +202,7 @@ record.clone: Klonēt
 record.history: Vēsture
 record.confirm.postpone: 'Are you sure you want postpone this record?'
 record.confirm.resume: 'Vai tiešām vēlaties atsākt šo ierakstu?'
+record.confirm.delete: 'Tiešām vēlaties dzēst šo ierakstu?'
 event.record_created: 'Ieraksts ir izveidots "%value%" stāvoklī'
 event.record_edited: 'Ieraksts ir mainīts'
 event.record_assigned: 'Ieraksts adresēts uz %value%.'
