--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -202,6 +202,7 @@ record.clone: Kopie
 record.history: Geschiedenis
 record.confirm.postpone: 'Are you sure you want postpone this record?'
 record.confirm.resume: 'Ben je zeker dat je dit record wilt hervatten?'
+record.confirm.delete: 'Ben je zeker dat je dit record wilt verwijderen?'
 event.record_created: 'Record is aangemaakt in "%value%" status.'
 event.record_edited: 'Record is bewerkt.'
 event.record_assigned: 'Record is toegewezen aan %value%.'
