--- a/app/Resources/translations/messages.pt_BR.yml
+++ b/app/Resources/translations/messages.pt_BR.yml
@@ -202,6 +202,7 @@ record.clone: Clonar
 record.history: Histórico
 record.confirm.postpone: 'Are you sure you want postpone this record?'
 record.confirm.resume: 'Tem certeza que quer retomar este registro?'
+record.confirm.delete: 'Tem certeza que quer apagar este registro?'
 event.record_created: 'Registro criado no estado "%value%".'
 event.record_edited: 'Registro modificado.'
 event.record_assigned: 'Registro delegado para %value%.'
