--- a/app/Resources/translations/messages.ro.yml
+++ b/app/Resources/translations/messages.ro.yml
@@ -202,6 +202,7 @@ record.clone: Clonare
 record.history: Istoric
 record.confirm.postpone: 'Are you sure you want postpone this record?'
 record.confirm.resume: 'Sunteti sigur ca vreti sa reluati aceasta inregistrare?'
+record.confirm.delete: 'Sunteti sigur ca doriti sa stergeti aceasta inregistrare?'
 event.record_created: 'Inregistrarea e creata cu starea "%value%".'
 event.record_edited: 'Inregistrarea e modificata.'
 event.record_assigned: 'Inregistrarea e asignata lui %value%.'
